--- a/resources/equipo4/css/equipo4.css
+++ b/resources/equipo4/css/equipo4.css
@@ -79,3 +79,23 @@ h1 {
   font-family: Arial, sans-serif;
   font-weight: normal;
 }
+
+@media only screen and (max-width: 768px) {
+  #title {
+    padding-top: 50vh;
+    padding-left: 10vw;
+  }
+
+  h1 {
+    font-size: 15px;
+    font-family: Arial, sans-serif;
+    font-weight: normal;
+  }
+
+  .footer {
+    background-color: #C8C8C8;
+    width: 100%;
+    height: 110vh;
+    margin-top: -32vh;
+  }
+}
